--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.8.0",
+    "@reduxjs/toolkit": "^1.8.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
@@ -15,7 +16,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "shortid": "^2.2.16",
