--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
