--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "react-toastify": "^9.0.1",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
