--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
-    "react-toastify": "^9.0.1",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
@@ -19,9 +18,11 @@
     "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "shortid": "^2.2.16",
